[gd_scene load_steps=9 format=3 uid="uid://bdwver4fu2f63"]

[ext_resource type="Script" path="res://Scripts/PieceTypeToggleHandler.gd" id="2_mvj8s"]
[ext_resource type="Texture2D" uid="uid://cyh4x57u1r6oo" path="res://Sprites/MenuPanelBlue.png" id="2_oec3q"]
[ext_resource type="Texture2D" uid="uid://bsl1lwn1dxg5k" path="res://Sprites/RimPieceUnit.png" id="3_34kky"]
[ext_resource type="Texture2D" uid="uid://c256ygedmbdwn" path="res://Sprites/CircleXTick.png" id="4_37m4n"]
[ext_resource type="Texture2D" uid="uid://bnf5p3wv4pfjv" path="res://Sprites/RoundedRect.png" id="4_em3uv"]
[ext_resource type="Texture2D" uid="uid://bv3kjhh6v05u2" path="res://Sprites/ConePieceUnit.png" id="5_tkehi"]
[ext_resource type="Texture2D" uid="uid://bwqhtg50cvt55" path="res://Sprites/CircleXNull.png" id="6_2vout"]
[ext_resource type="Theme" uid="uid://cvw4xctkkuhop" path="res://Themes/close_button_theme.tres" id="7_7kxu0"]

[node name="PieceTypeLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("2_mvj8s")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.572549)

[node name="PieceTypePanel" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 250)
texture = ExtResource("2_oec3q")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="RimRect" type="TextureRect" parent="PieceTypePanel"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -160.0
offset_right = -70.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 120)
texture = ExtResource("3_34kky")
expand_mode = 1

[node name="RoundRect" type="TextureRect" parent="PieceTypePanel/RimRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 120)
texture = ExtResource("4_em3uv")
expand_mode = 1

[node name="PositionControl" type="Control" parent="PieceTypePanel/RimRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 186.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonSelectable" type="TextureRect" parent="PieceTypePanel/RimRect/PositionControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -36.0
offset_right = 36.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(36, 36)
texture = ExtResource("4_37m4n")
expand_mode = 1

[node name="ConeRect" type="TextureRect" parent="PieceTypePanel"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 70.0
offset_top = -160.0
offset_right = 310.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 120)
texture = ExtResource("5_tkehi")
expand_mode = 1

[node name="RoundRect" type="TextureRect" parent="PieceTypePanel/ConeRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(120, 120)
texture = ExtResource("4_em3uv")
expand_mode = 1

[node name="PositionControl" type="Control" parent="PieceTypePanel/ConeRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 186.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonSelectable" type="TextureRect" parent="PieceTypePanel/ConeRect/PositionControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(24, 24)
texture = ExtResource("6_2vout")
expand_mode = 1

[node name="CloseButton" type="Button" parent="PieceTypePanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -75.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 75.0
grow_horizontal = 0
pivot_offset = Vector2(60, 60)
theme = ExtResource("7_7kxu0")
